# hackathon_2024_team10

./: .env  Kai_agents.py  PRT-schemes.csv  README.md  kai_agent_1.py  prt_schemes_recommender.py  pyproject.toml
FINAL_WORKS/: agent1chatGPT.py  agent2chatGPT.py  agent3chatGPT.py  agent4chatGPT.py  documentA_rules.txt  documentB_claim_details.docx  documentB_claims.txt  price_prediction.json
KAI/: agent1.py  agent2.py  agent3.py  message_models.py  simulate_process.py
KAI_2/: 01_rule_extractor.py
example_files/: Extracted_Data.docx  main.py  private_keys.json  script1.py  script2.py  script3.py  ~$tracted_Data.docx
